--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,28 @@
+anyio==3.3.1
+beautifulsoup4==4.10.0
+bs4==0.0.1
 certifi==2021.5.30
 charset-normalizer==2.0.6
 click==8.0.1
 colorama==0.4.4
 Flask==2.0.1
+Flask-Cors==3.0.10
 gunicorn==20.1.0
+h11==0.12.0
+httpcore==0.13.7
+httpx==0.18.2
 idna==3.2
+itranslate==0.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
+joblib==1.0.1
+logzero==1.7.0
 MarkupSafe==2.0.1
 requests==2.26.0
+rfc3986==1.5.0
+six==1.16.0
+sniffio==1.2.0
+soupsieve==2.2.1
+tika==1.24
 urllib3==1.26.6
 Werkzeug==2.0.1
